syntax = "proto3";

service FileTransfer {
    rpc GetFile (FileRequest) returns (FileResponse) {}
}

message FileRequest {
    string filename = 1;
}

message FileResponse {
    bytes content = 1;
}